# skui2

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: buildqt.yml
docs/: .gitignore  devmanuel.md  usermanuel.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  document.cpp  document.h  mainwindow.cpp  mainwindow.h
src/node/: CMakeLists.txt  interface.cpp  interface.h  node.cpp  node.h  propertywindow.cpp  propertywindow.h
src/node/nodes/: label.cpp  label.h  slider.cpp  slider.h  visual.cpp  visual.h
src/nodeeditor/: CMakeLists.txt  node.h  node_graphicsitem.cpp  node_graphicsitem.h  nodeeditor.cpp  nodeeditor.h  nodeeditor_scene.cpp  nodeeditor_scene.h
src/nodeeditor/graphicsitems/: cable.cpp  cable.h  node_graphicsitem.cpp  node_graphicsitem.h  pad.cpp  pad.h
src/panel/: CMakeLists.txt  panel.cpp  panel.h  propertywindow.cpp  propertywindow.h  resizeboundingbox.cpp  resizeboundingbox.h  visual.cpp  visual.h  visual_container.cpp  visual_container.h
src/panel/visuals/: slider.cpp  slider.h  test.cpp  test.h
